Make sure .full negative margin sticks on images wrapped in <p></p>

--- a/assets/_scss/_utilities.scss
+++ b/assets/_scss/_utilities.scss
@@ -138,7 +138,7 @@ body:hover .visually-hidden button {
 
 .full {
   @include breakpoint($large){
-    margin-right: -1 * span(2.5 of 12);
+    margin-right: -1 * span(2.5 of 12) !important;
   }
 }
 
